# sc-likes

./: Cargo.toml  README.md
src/: errors.rs  main.rs  types.rs
