[package]
name = "sc-likes"
version = "0.1.0"
authors = ["SitiSchu <admin@sitischu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.10", features=["json"]}
serde = { version = "1.0", features = ["derive"] }
tokio = "0.2"
dialoguer = "0.5"
url = "2.1"
serde_json = "1.0"
